--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
     <body>
         <script src="./js/phaser-arcade-physics.js"></script>
         <script type="module" src="game.js"></script>
+        <script src="./js/easystar-0.4.4.js"></script>
     </body>
 </html>
